--- a/client.html
+++ b/client.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="stylesheet" href="css/modal.css">
+
   </head>
   <body>
   
@@ -124,12 +125,13 @@
                 <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
                 <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
                 <p>
-                  <button type="button" class="btn btn-dark">Inquire</button>
+                  <button type="button" class="btn btn-dark " data-toggle="modal" data-target=".modal">Inquire</button>
                 </p>
               </div>
 
             </div>
           </div>
+
 
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-5">
             <div class="team-member">
@@ -142,7 +144,7 @@
                 <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
                 <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
                 <p>
-                  <button type="button" class="btn btn-dark">Inquire</button>
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target=".modal">Inquire</button>
                 </p>
               </div>
 
@@ -160,7 +162,7 @@
                 <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
                 <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
                 <p>
-                  <button type="button" class="btn btn-dark">Inquire</button>
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target=".modal">Inquire</button>
                 </p>
               </div>
 
@@ -178,7 +180,7 @@
                 <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
                 <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
                 <p>
-                  <button type="button" class="btn btn-dark">Inquire</button>
+                  <button type="button" class="btn btn-dark " data-toggle="modal" data-target=".modal">Inquire</button>
                 </p>
               </div>
 
@@ -196,7 +198,7 @@
                 <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
                 <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
                 <p>
-                  <button type="button" class="btn btn-dark">Inquire</button>
+                  <button type="button" class="btn btn-dark " data-toggle="modal" data-target=".modal">Inquire</button>
                 </p>
               </div>
 
@@ -214,11 +216,23 @@
                 <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
                 <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
                 <p>
-                  <button type="button" class="btn btn-dark">Inquire</button>
+                  <button type="button" class="btn btn-dark " data-toggle="modal" data-target=".modal">Inquire</button>
               </div>
 
             </div>
           </div>
+        </div>
+      </div>
+
+      <div class="modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+
+          <div class="modal-content">
+            <div class="modal-header">I </div>
+            <div class="modal-body">Love you</div>
+          <div class="modal-footer">Famae</div>
+
+        </div>
         </div>
       </div>
 
@@ -286,6 +300,7 @@
   <script src="js/circleaudioplayer.js"></script>
 
   <script src="js/main.js"></script>
+  <script src="js/modal.js"></script>
     
   </body>
 </html>
